add: 알람 리스트뷰 연습

--- a/EYAK(rev2)/app/build.gradle
+++ b/EYAK(rev2)/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     //  SharedPreference
     implementation 'androidx.preference:preference-ktx:1.2.0'
+
+    // 카드뷰
+    implementation "androidx.cardview:cardview:1.0.0"
 }
