--- a/EYAK(rev2)/app/build.gradle
+++ b/EYAK(rev2)/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
 
     // 카드뷰
     implementation "androidx.cardview:cardview:1.0.0"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
