--- a/EYAK(rev2)/app/src/main/AndroidManifest.xml
+++ b/EYAK(rev2)/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EYAKrev1"
+
+        
+        android:usesCleartextTraffic="true"
+
         tools:targetApi="31">
         <activity
             android:name=".EditMemberActivity"
