--- a/backend/e-yak/build.gradle
+++ b/backend/e-yak/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.31'
 
 
 }
