--- a/EYAK(rev2)/settings.gradle
+++ b/EYAK(rev2)/settings.gradle
@@ -1,15 +1,19 @@
 pluginManagement {
     repositories {
         google()
+        jcenter()
         mavenCentral()
         gradlePluginPortal()
+        maven { url "https://jitpack.io" }
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 rootProject.name = "EYAK(rev1)"
