--- a/frontend/EYAK(rev2)/app/build.gradle
+++ b/frontend/EYAK(rev2)/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.eyakrev1'
+    namespace 'a103.dev.eyakrev1'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.eyakrev1"
+        applicationId "a103.dev.eyakrev1"
         minSdk 26
         targetSdk 33
         versionCode 1
