Revert "fix: 프로젝트 명 변경, 플레이스토어 출시 문제로"
This reverts commit 7ae90e46d458bd64095b0f126b8b14687717c40b.

--- a/frontend/EYAK(rev2)/app/build.gradle
+++ b/frontend/EYAK(rev2)/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'a103.dev.eyakrev1'
+    namespace 'com.example.eyakrev1'
     compileSdk 33
 
     defaultConfig {
-        applicationId "a103.dev.eyakrev1"
+        applicationId "com.example.eyakrev1"
         minSdk 26
         targetSdk 33
         versionCode 1
