--- a/backend/e-yak/build.gradle
+++ b/backend/e-yak/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	// springdoc
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
+//	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-common', version: '2.1.0'
+
 
 }
 
