--- a/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
+++ b/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:name=".MainActivity"
             android:exported="true" />
 
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
