--- a/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
+++ b/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:usesPermissionFlags="neverForLocation"
         tools:targetApi="s"/>
 
+    <!-- 알람 필요 권한 -->
     <uses-permission android:name="android.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -29,9 +31,6 @@
         android:theme="@style/Theme.EYAKrev1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".MyCalendarActivity"
-            android:exported="false" />
         <activity
             android:name=".EditMemberActivity"
             android:exported="false" />
@@ -51,7 +50,8 @@
             android:name=".MainActivity"
             android:exported="true" />
 
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".FirstAlarmReceiver" />
+        <receiver android:name=".SecondAlarmReceiver" />
     </application>
 
 </manifest>
