fix: 디바이스 배치 약 저장 및 불러오기(미완성)

--- a/frontend/EYAK(rev2)/app/build.gradle
+++ b/frontend/EYAK(rev2)/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     
     // calendar view 라이브러리
     implementation 'com.github.kizitonwose:CalendarView:1.0.4'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.6.2'
 }
