--- a/frontend/EYAK(rev2)/app/build.gradle
+++ b/frontend/EYAK(rev2)/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
 
     // gson
     implementation 'com.google.code.gson:gson:2.6.2'
+
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
