--- a/frontend/EYAK(rev2)/app/build.gradle
+++ b/frontend/EYAK(rev2)/app/build.gradle
@@ -65,5 +65,6 @@ dependencies {
     // gson
     implementation 'com.google.code.gson:gson:2.6.2'
 
+    // PDF 만들기
     implementation 'com.itextpdf:itextg:5.5.10'
 }
