--- a/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
+++ b/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +31,9 @@
         android:theme="@style/Theme.EYAKrev1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <service
+            android:name=".ForeService"></service>
+
         <activity
             android:name=".AlarmClickedActivity"
             android:exported="false" />
