--- a/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
+++ b/frontend/EYAK(rev2)/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <!-- PDF 외부 저장 공간 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
